--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 </p>
 <p data-ln="45">
 	<span id="45#trīstisque" data-intext="trīstisque" data-perslemma="tristis" data-lemma="trīstis trīste" data-pos="a-s---mn-" data-shortdef="sad">trīstisque</span>
-	<span id="45#mundus" data-intext="mundus" data-perslemma="mundus" data-lemma="mundus –a –um" data-pos="n-s---mn-" data-shortdef="clean, neat, elegant">mundus</span>
+	<span id="45#mundus" data-intext="mundus" data-perslemma="mundus" data-lemma="mundus –ī m." data-pos="n-s---mn-" data-shortdef="the world, earth">mundus</span>
 	<span id="45#nūbilō" data-intext="nūbilō" data-perslemma="nubilus" data-lemma="nūbilus –a –um" data-pos="a-s---mb-" data-shortdef="cloudy">nūbilō</span>
 	<span id="45#pallet" data-intext="pallet" data-perslemma="palleo" data-lemma="palleō –ēre –uī" data-pos="v3spia---" data-shortdef="to be pale">pallet</span>
 	<span id="45#diē" data-intext="diē" data-perslemma="dies" data-lemma="diēs diēī m./f." data-pos="n-s---mb-" data-shortdef="day">diē</span>.
@@ -377,7 +377,7 @@
 	<span id="46#serēnīs" data-intext="serēnīs" data-perslemma="serenus1" data-lemma="serēnus –a –um" data-pos="a-p---fb-" data-shortdef="serene, calm">serēnīs</span>
 	<span id="46#noctibus" data-intext="noctibus" data-perslemma="nox" data-lemma="nox noctis f." data-pos="n-p---fb-" data-shortdef="night">noctibus</span>
 	<span id="46#sīdus" data-intext="sīdus" data-perslemma="sidus" data-lemma="sīdus sīderis n." data-pos="n-s---nn-" data-shortdef="star">sīdus</span>
-	<span id="46#micat" data-intext="micat" data-perslemma="mico" data-lemma="micō micāre micuī" data-pos="v3spia---" data-shortdef="to vibrate; play the game of morra (guessing the number of fingers)">micat</span>,
+	<span id="46#micat" data-intext="micat" data-perslemma="mico" data-lemma="micō micāre micuī" data-pos="v3spia---" data-shortdef="to vibrate, shake, twinkle">micat</span>,
 </p>
 <p data-ln="47">
 	<span id="47#sed" data-intext="sed" data-perslemma="sed" data-lemma="sed" data-pos="c--------" data-shortdef="but">sed</span>
@@ -940,7 +940,7 @@
 <p data-ln="116">
 	<span id="116#fīgere" data-intext="fīgere" data-perslemma="figo" data-lemma="fīgō fīgere fīxī fīxus" data-pos="v--pna---" data-shortdef="to fix, fasten">fīgere</span>
 	<span id="116#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
-	<span id="116#mundō" data-intext="mundō" data-perslemma="mundus" data-lemma="mundus –a –um" data-pos="n-s---mb-" data-shortdef="clean, neat, elegant">mundō</span>
+	<span id="116#mundō" data-intext="mundō" data-perslemma="mundus" data-lemma="mundus –ī m." data-pos="n-s---mb-" data-shortdef="the world, earth">mundō</span>
 	<span id="116#tua" data-intext="tua" data-perslemma="tuus" data-lemma="tuus –a –um" data-pos="a-p---na-" data-shortdef="your">tua</span>
 	<span id="116#signa" data-intext="signa" data-perslemma="signum" data-lemma="signum signī n." data-pos="n-p---na-" data-shortdef="mark, impression, sign; watchword, password">signa</span>
 	<span id="116#prīmō" data-intext="prīmō" data-perslemma="primus" data-lemma="prīmus –a –um" data-pos="a-s---mb-" data-shortdef="first">prīmō</span>.
@@ -1923,7 +1923,7 @@
 	<span id="250#ō" data-intext="ō" data-perslemma="o" data-lemma="ō" data-pos="e--------" data-shortdef="O (often with vocative)">ō</span>
 	<span id="250#serēnī" data-intext="serēnī" data-perslemma="serenus1" data-lemma="serēnus –a –um" data-pos="a-s---ng-" data-shortdef="serene, calm">serēnī</span>
 	<span id="250#maximum" data-intext="maximum" data-perslemma="maximus" data-lemma="maximus –a –um" data-pos="a-s---nv-" data-shortdef="greatest; maxime: most, especially, very much">maximum</span>
-	<span id="250#mundī" data-intext="mundī" data-perslemma="mundus" data-lemma="mundus –a –um" data-pos="n-s---mg-" data-shortdef="clean, neat, elegant">mundī</span>
+	<span id="250#mundī" data-intext="mundī" data-perslemma="mundus" data-lemma="mundus –ī m." data-pos="n-s---mg-" data-shortdef="the world, earth">mundī</span>
 	<span id="250#decus" data-intext="decus" data-perslemma="decus1" data-lemma="decus decoris n." data-pos="n-s---nv-" data-shortdef="beauty; ornament; glory">decus</span>,
 </p>
 <p data-ln="251">
@@ -2718,7 +2718,7 @@
 	<span id="345#citātus" data-intext="citātus" data-perslemma="cito2" data-lemma="cito citius (comp.), citissime (superl.)" data-pos="v-srppmn-" data-shortdef="quickly">citātus</span>
 	<span id="345#vulnere" data-intext="vulnere" data-perslemma="vulnus" data-lemma="vulnus vulneris n." data-pos="n-s---nb-" data-shortdef="wound">vulnere</span>
 	<span id="345#angustō" data-intext="angustō" data-perslemma="angustus" data-lemma="angustus –a –um" data-pos="a-s---nb-" data-shortdef="narrow">angustō</span>
-	<span id="345#micat" data-intext="micat" data-perslemma="mico" data-lemma="micō micāre micuī" data-pos="v3spia---" data-shortdef="to vibrate; play the game of morra (guessing the number of fingers)">micat</span>
+	<span id="345#micat" data-intext="micat" data-perslemma="mico" data-lemma="micō micāre micuī" data-pos="v3spia---" data-shortdef="to vibrate, shake, twinkle">micat</span>
 </p>
 <p data-ln="346">
 	<span id="346#an" data-intext="an" data-perslemma="an" data-lemma="an" data-pos="c--------" data-shortdef="or, whether, if">an</span>
@@ -2978,7 +2978,7 @@
 	<span id="376#tremulō" data-intext="tremulō" data-perslemma="tremulus" data-lemma="tremulus –a –um" data-pos="a-s---mb-" data-shortdef="trembling">tremulō</span>
 	<span id="376#dēbilēs" data-intext="dēbilēs" data-perslemma="debilis" data-lemma="dēbilis –e" data-pos="a-p---mn-" data-shortdef="disabled, maimed">dēbilēs</span>
 	<span id="376#artūs" data-intext="artūs" data-perslemma="artus2" data-lemma="artus –a –um" data-pos="n-p---mn-" data-shortdef="straitened, narrow">artūs</span>
-	<span id="376#micant" data-intext="micant" data-perslemma="mico" data-lemma="micō micāre micuī" data-pos="v3ppia---" data-shortdef="to vibrate; play the game of morra (guessing the number of fingers)">micant</span>.
+	<span id="376#micant" data-intext="micant" data-perslemma="mico" data-lemma="micō micāre micuī" data-pos="v3ppia---" data-shortdef="to vibrate, shake, twinkle">micant</span>.
 </p>
 <p data-ln="377">
 	— <span id="377#īnfēcit" data-intext="īnfēcit" data-perslemma="inficio" data-lemma="īnficiō –ere –fēcī –fectus" data-pos="v3sria---" data-shortdef="to impart some foreign quality to an object; to taint">īnfēcit</span>
@@ -3848,7 +3848,7 @@
 	<span id="503#current" data-intext="current" data-perslemma="curro" data-lemma="currō currere cucurrī cursus" data-pos="v3pfia---" data-shortdef="to run">current</span>
 	<span id="503#annōsī" data-intext="annōsī" data-perslemma="annosus" data-lemma="annōsus –a –um" data-pos="a-s---ng-" data-shortdef="aged, old">annōsī</span>
 	<span id="503#sīdera" data-intext="sīdera" data-perslemma="sidus" data-lemma="sīdus sīderis n." data-pos="n-p---nn-" data-shortdef="star">sīdera</span>
-	<span id="503#mundī" data-intext="mundī" data-perslemma="mundus" data-lemma="mundus –ī m." data-pos="n-s---mg-" data-shortdef="the world, the earth">mundī</span>,
+	<span id="503#mundī" data-intext="mundī" data-perslemma="mundus" data-lemma="mundus –ī m." data-pos="n-s---mg-" data-shortdef="the world, earth">mundī</span>,
 </p>
 <p data-ln="504">
 	<span id="504#Ōceanus" data-intext="Ōceanus" data-perslemma="Oceanus" data-lemma="Ōceanus –ī m." data-pos="n-s---mn-" data-shortdef="Oceanus">Ōceanus</span>
@@ -8122,7 +8122,7 @@
 	<span id="1028#nōn" data-intext="nōn" data-perslemma="non" data-lemma="nōn" data-pos="d--------" data-shortdef="not">nōn</span>
 	<span id="1028#sī" data-intext="sī" data-perslemma="si" data-lemma="sī" data-pos="c--------" data-shortdef="if">sī</span>
 	<span id="1028#ipse" data-intext="ipse" data-perslemma="ipse" data-lemma="ipse ipsa ipsum" data-pos="p-s---mn-" data-shortdef="himself, herself, itself (intensive)">ipse</span>
-	<span id="1028#mundum" data-intext="mundum" data-perslemma="mundus" data-lemma="mundus –a –um" data-pos="n-s---ma-" data-shortdef="clean, neat, elegant">mundum</span>
+	<span id="1028#mundum" data-intext="mundum" data-perslemma="mundus" data-lemma="mundus –ī m." data-pos="n-s---ma-" data-shortdef="the world, earth">mundum</span>
 	<span id="1028#concitāns" data-intext="concitāns" data-perslemma="concito" data-lemma="concitō concitāre concitāvī concitātus" data-pos="v-sppamn-" data-shortdef="to incite">concitāns</span>
 	<span id="1028#dīvum" data-intext="dīvum" data-perslemma="divus" data-lemma="dīvus –a –um" data-pos="a-p---mg-" data-shortdef="divine">dīvum</span>
 	<span id="1028#sator" data-intext="sator" data-perslemma="sator" data-lemma="sator satōris m." data-pos="n-s---mn-" data-shortdef="planter sower begetter father founder">sator</span>
