--- a/index.html
+++ b/index.html
@@ -962,13 +962,13 @@
 	<span id="119#terga" data-intext="terga" data-perslemma="tergum" data-lemma="tergum tergī n. or tergus –oris n." data-pos="n-p---na-" data-shortdef="the back of men or animals">terga</span>
 	<span id="119#fallācis" data-intext="fallācis" data-perslemma="fallax" data-lemma="fallāx (fallācis)" data-pos="a-s---mg-" data-shortdef="deceitful, treacherous, false">fallācis</span>
 	<span id="119#metuenda" data-intext="metuenda" data-perslemma="metuo" data-lemma="metuō metuere metuī" data-pos="v-p-g-na-" data-shortdef="to fear, dread">metuenda</span>
-	<span id="119#Parthī" data-intext="Parthī" data-perslemma="Parthus" data-lemma="Parthus –a –um" data-pos="n-s---mg-" data-shortdef="Parthian">Parthī</span>;
+	<span id="119#Parthī" data-intext="Parthī" data-perslemma="Parthus" data-lemma="Parthus –a –um" data-pos="n-s---mg-" data-shortdef="Parthian">Parthī</span>.
 </p>
 <p data-ln="120">
 	<span id="120#lītus" data-intext="lītus" data-perslemma="litus3" data-lemma="litus –ī m." data-pos="n-s---na-" data-shortdef="besmearment, anointing">lītus</span>
 	<span id="120#intrāvit" data-intext="intrāvit" data-perslemma="intro2" data-lemma="intrō" data-pos="v3sria---" data-shortdef="within">intrāvit</span>
 	<span id="120#pelagī" data-intext="pelagī" data-perslemma="pelagus" data-lemma="pelagus pelagī m." data-pos="n-s---ng-" data-shortdef="sea">pelagī</span>
-	<span id="120#rubentis" data-intext="rubentis" data-perslemma="rubeo" data-lemma="rubeō rubēre rubuī" data-pos="v-sppang-" data-shortdef="to be red">rubentis</span>:
+	<span id="120#rubentis" data-intext="rubentis" data-perslemma="rubeo" data-lemma="rubeō rubēre rubuī" data-pos="v-sppang-" data-shortdef="to be red">rubentis</span>;
 </p>
 <p data-ln="121">
 	<span id="121#prōmit" data-intext="prōmit" data-perslemma="promo" data-lemma="prōmō –ere –prōmpsī –prōmptus" data-pos="v3spia---" data-shortdef="to take">prōmit</span>
@@ -1005,7 +1005,7 @@
 	<span id="126#semper" data-intext="semper" data-perslemma="semper" data-lemma="semper" data-pos="d--------" data-shortdef="always">semper</span>
 	<span id="126#nova" data-intext="nova" data-perslemma="novus" data-lemma="novus –a –um" data-pos="a-s---fn-" data-shortdef="new">nova</span>
 	<span id="126#pompa" data-intext="pompa" data-perslemma="pompa" data-lemma="pompa –ae f." data-pos="n-s---fn-" data-shortdef="procession, parade; the set piece at a banquet">pompa</span>
-	<span id="126#Mortī" data-intext="Mortī" data-perslemma="mors" data-lemma="mors mortis f." data-pos="n-s---fd-" data-shortdef="death">Mortī</span>;
+	<span id="126#Mortī" data-intext="Mortī" data-perslemma="mors" data-lemma="mors mortis f." data-pos="n-s---fd-" data-shortdef="death">Mortī</span>,
 </p>
 <p data-ln="127">
 	<span id="127#longus" data-intext="longus" data-perslemma="longus" data-lemma="longus –a –um" data-pos="a-s---mn-" data-shortdef="long, far">longus</span>
@@ -1021,7 +1021,7 @@
 	<span id="128#trīstis" data-intext="trīstis" data-perslemma="tristis" data-lemma="trīstis trīste" data-pos="a-s---fn-" data-shortdef="sad">trīstis</span>
 </p>
 <p data-ln="129">
-	<span id="129#haeret" data-intext="haeret" data-perslemma="haereo" data-lemma="haereō haerēre haesī haesus" data-pos="v3spia---" data-shortdef="to stick to, hang on to">haeret</span>
+	<span id="129#haeret" data-intext="haeret" data-perslemma="haereo" data-lemma="haereō haerēre haesī haesus" data-pos="v3spia---" data-shortdef="to stick to, hang on to">haeret</span>,
 	<span id="129#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="129#turbae" data-intext="turbae" data-perslemma="turba" data-lemma="turba turbae f." data-pos="n-s---fd-" data-shortdef="uproar, commotion, crowd">turbae</span>
 	<span id="129#tumulōs" data-intext="tumulōs" data-perslemma="tumulus" data-lemma="tumulus tumulī m." data-pos="n-p---ma-" data-shortdef="mound">tumulōs</span>
@@ -1050,20 +1050,20 @@
 	<span id="133#vīs" data-intext="vīs" data-perslemma="vis" data-lemma="vīs vis f." data-pos="n-s---fn-" data-shortdef="force">vīs</span>
 	<span id="133#tardās" data-intext="tardās" data-perslemma="tardus" data-lemma="tardus –a –um" data-pos="a-p---fa-" data-shortdef="slow">tardās</span>
 	<span id="133#tetigit" data-intext="tetigit" data-perslemma="tango" data-lemma="tangō tangere tetigī tāctus" data-pos="v3sria---" data-shortdef="to touch">tetigit</span>
-	<span id="133#bidentēs" data-intext="bidentēs" data-perslemma="bidens" data-lemma="bidēns –ntis" data-pos="a-p---ma-" data-shortdef="having two teeth; a sacrifical animal">bidentēs</span>.
+	<span id="133#bidentēs" data-intext="bidentēs" data-perslemma="bidens" data-lemma="bidēns –ntis" data-pos="a-p---ma-" data-shortdef="having two teeth; a sacrifical animal">bidentēs</span>:
 </p>
 <p data-ln="134">
 	<span id="134#lāniger" data-intext="lāniger" data-perslemma="laniger" data-lemma="lāniger –era –erum" data-pos="n-s---mn-" data-shortdef="wool-bearing">lāniger</span>
 	<span id="134#pinguēs" data-intext="pinguēs" data-perslemma="pinguis" data-lemma="pinguis pingue" data-pos="a-p---fa-" data-shortdef="fat; dull">pinguēs</span>
 	<span id="134#male" data-intext="male" data-perslemma="male" data-lemma="male" data-pos="d--------" data-shortdef="badly">male</span>
 	<span id="134#carpsit" data-intext="carpsit" data-perslemma="carpo" data-lemma="carpō carpere carpsī carptum" data-pos="v3sria---" data-shortdef="to pluck, seize; criticize">carpsit</span>
-	<span id="134#herbās" data-intext="herbās" data-perslemma="herba" data-lemma="herba herbae f." data-pos="n-p---fa-" data-shortdef="grass, herb">herbās</span>;
+	<span id="134#herbās" data-intext="herbās" data-perslemma="herba" data-lemma="herba herbae f." data-pos="n-p---fa-" data-shortdef="grass, herb">herbās</span>.
 </p>
 <p data-ln="135">
 	<span id="135#colla" data-intext="colla" data-perslemma="collum" data-lemma="collum collī m." data-pos="n-p---na-" data-shortdef="neck">colla</span>
 	<span id="135#tāctūrus" data-intext="tāctūrus" data-perslemma="tango" data-lemma="tangō tangere tetigī tāctus" data-pos="v-sfpamn-" data-shortdef="to touch">tāctūrus</span>
 	<span id="135#steterat" data-intext="steterat" data-perslemma="sto" data-lemma="stō stāre stetī statum" data-pos="v3slia---" data-shortdef="to stand">steterat</span>
-	<span id="135#sacerdōs" data-intext="sacerdōs" data-perslemma="sacerdos1" data-lemma="sacerdōs sacerdōtis m./f." data-pos="n-s---mn-" data-shortdef="priest, priestess">sacerdōs</span>:
+	<span id="135#sacerdōs" data-intext="sacerdōs" data-perslemma="sacerdos1" data-lemma="sacerdōs sacerdōtis m./f." data-pos="n-s---mn-" data-shortdef="priest, priestess">sacerdōs</span> —
 </p>
 <p data-ln="136">
 	<span id="136#dum" data-intext="dum" data-perslemma="dum" data-lemma="dum" data-pos="c--------" data-shortdef="while, until, provided that">dum</span>
@@ -1090,7 +1090,7 @@
 	<span id="139#ponderis" data-intext="ponderis" data-perslemma="pondus" data-lemma="pondus ponderis n." data-pos="n-s---ng-" data-shortdef="weight">ponderis</span>
 	<span id="139#vastī" data-intext="vastī" data-perslemma="vastus" data-lemma="vāstus –a –um" data-pos="a-s---ng-" data-shortdef="empty; vast">vastī</span>
 	<span id="139#resolūta" data-intext="resolūta" data-perslemma="resolvo" data-lemma="resolvō –ere –solvī –solūtus" data-pos="v-srppfn-" data-shortdef="to untie">resolūta</span>
-	<span id="139#cervīx" data-intext="cervīx" data-perslemma="cervix" data-lemma="cervīx cervīcis f." data-pos="n-s---fn-" data-shortdef="neck">cervīx</span>:
+	<span id="139#cervīx" data-intext="cervīx" data-perslemma="cervix" data-lemma="cervīx cervīcis f." data-pos="n-s---fn-" data-shortdef="neck">cervīx</span>.
 </p>
 <p data-ln="140">
 	<span id="140#nec" data-intext="nec" data-perslemma="nec" data-lemma="nec" data-pos="c--------" data-shortdef="nor; and not">nec</span>
@@ -1115,7 +1115,7 @@
 </p>
 <p data-ln="143">
 	<span id="143#concīdit" data-intext="concīdit" data-perslemma="concido1" data-lemma="concidō concidere concidī" data-pos="v3sria---" data-shortdef="to fall down">concīdit</span>
-	<span id="143#gȳrō" data-intext="gȳrō" data-perslemma="gyrus" data-lemma="gȳrus –ī m." data-pos="n-s---mb-" data-shortdef="circle">gȳrō</span>,
+	<span id="143#gȳrō" data-intext="gȳrō" data-perslemma="gyrus" data-lemma="gȳrus –ī m." data-pos="n-s---mb-" data-shortdef="circle">gȳrō</span>
 	<span id="143#dominumque" data-intext="dominumque" data-perslemma="dominus" data-lemma="dominus dominī m." data-pos="n-s---ma-" data-shortdef="master">dominumque</span>
 	<span id="143#prōnō" data-intext="prōnō" data-perslemma="pronus" data-lemma="prōnus –a –um" data-pos="a-s---mb-" data-shortdef="sloping; easy">prōnō</span>
 </p>
@@ -1137,7 +1137,7 @@
 </p>
 <p data-ln="147">
 	<span id="147#dēficit" data-intext="dēficit" data-perslemma="deficio" data-lemma="dēficiō dēficere dēfēcī dēfectus" data-pos="v3spia---" data-shortdef="to fail; revolt from">dēficit</span>
-	<span id="147#pāstor" data-intext="pāstor" data-perslemma="pastor" data-lemma="pāstor pāstōris m." data-pos="n-s---mn-" data-shortdef="shepherd">pāstor</span>
+	<span id="147#pāstor" data-intext="pāstor" data-perslemma="pastor" data-lemma="pāstor pāstōris m." data-pos="n-s---mn-" data-shortdef="shepherd">pāstor</span>,
 	<span id="147#grege" data-intext="grege" data-perslemma="grex" data-lemma="grex gregis m." data-pos="n-s---mb-" data-shortdef="herd, flock">grege</span>
 	<span id="147#dēminūtō" data-intext="dēminūtō" data-perslemma="deminuo" data-lemma="dēminuō –minuere –minuī –minūtum" data-pos="v-srppmb-" data-shortdef="to diminish">dēminūtō</span>,
 </p>
@@ -1152,13 +1152,13 @@
 	<span id="149#lupōs" data-intext="lupōs" data-perslemma="lupus1" data-lemma="lupus lupī m." data-pos="n-p---ma-" data-shortdef="wolf">lupōs</span>
 	<span id="149#cervī" data-intext="cervī" data-perslemma="cervus" data-lemma="cervus –ī m." data-pos="n-p---mn-" data-shortdef="stag">cervī</span>
 	<span id="149#metuunt" data-intext="metuunt" data-perslemma="metuo" data-lemma="metuō metuere metuī" data-pos="v3ppia---" data-shortdef="to fear, dread">metuunt</span>
-	<span id="149#rapācēs" data-intext="rapācēs" data-perslemma="rapax" data-lemma="rapāx (rapācis)" data-pos="a-p---ma-" data-shortdef="predatory, rapacious">rapācēs</span>,
+	<span id="149#rapācēs" data-intext="rapācēs" data-perslemma="rapax" data-lemma="rapāx (rapācis)" data-pos="a-p---ma-" data-shortdef="predatory, rapacious">rapācēs</span>;
 </p>
 <p data-ln="150">
 	<span id="150#cessat" data-intext="cessat" data-perslemma="cesso" data-lemma="cessō cessāre cessāvī cessātus" data-pos="v3spia---" data-shortdef="to cease">cessat</span>
 	<span id="150#īrātī" data-intext="īrātī" data-perslemma="iratus" data-lemma="īrātus –a –um" data-pos="a-s---mg-" data-shortdef="angry">īrātī</span>
 	<span id="150#fremitus" data-intext="fremitus" data-perslemma="fremitus" data-lemma="fremitus –ūs m." data-pos="n-s---mn-" data-shortdef="murmuring">fremitus</span>
-	<span id="150#leōnis" data-intext="leōnis" data-perslemma="leo2" data-lemma="leō leōnis m." data-pos="n-s---mg-" data-shortdef="lion">leōnis</span>,
+	<span id="150#leōnis" data-intext="leōnis" data-perslemma="leo2" data-lemma="leō leōnis m." data-pos="n-s---mg-" data-shortdef="lion">leōnis</span>;
 </p>
 <p data-ln="151">
 	<span id="151#nūlla" data-intext="nūlla" data-perslemma="nullus" data-lemma="nūllus –a –um" data-pos="a-s---fn-" data-shortdef="not any, no">nūlla</span>
@@ -1174,7 +1174,7 @@
 	<span id="152#serpēns" data-intext="serpēns" data-perslemma="serpens" data-lemma="serpēns –entis m./f." data-pos="n-s---fn-" data-shortdef="creeping thing; snake">serpēns</span>,
 </p>
 <p data-ln="153">
-	<span id="153#āret" data-intext="āret" data-perslemma="areo" data-lemma="āreō –ēre –uī" data-pos="v3spia---" data-shortdef="to be dry; wither">āret</span>
+	<span id="153#āret" data-intext="āret" data-perslemma="areo" data-lemma="āreō –ēre –uī" data-pos="v3spia---" data-shortdef="to be dry; wither">āret</span>,
 	<span id="153#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="153#siccō" data-intext="siccō" data-perslemma="siccus" data-lemma="siccus –a –um" data-pos="a-s---nb-" data-shortdef="dry">siccō</span>
 	<span id="153#moritur" data-intext="moritur" data-perslemma="morior" data-lemma="morior morī mortuus" data-pos="v3spid---" data-shortdef="to die">moritur</span>
