--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
 	<span id="97#leōnis" data-intext="leōnis" data-perslemma="leo2" data-lemma="leō leōnis m." data-pos="n-s---mg-" data-shortdef="lion">leōnis</span>
 	<span id="97#mōre" data-intext="mōre" data-perslemma="mos" data-lemma="mōs mōris m." data-pos="n-s---mb-" data-shortdef="custom">mōre</span>
 	<span id="97#conciperet" data-intext="conciperet" data-perslemma="concipio" data-lemma="concipiō concipere concēpī conceptum" data-pos="v3sisa---" data-shortdef="to produce, conceive">conciperet</span>
-	<span id="97#minās" data-intext="minās" data-perslemma="mina" data-lemma="mina –ae f." data-pos="n-p---fa-" data-shortdef="a silver mina (unit of currency; Greek μνᾶ)">minās</span>,
+	<span id="97#minās" data-intext="minās" data-perslemma="minae" data-lemma="minae –ārum f.pl." data-pos="n-p---fa-" data-shortdef="threats">minās</span>,
 </p>
 <p data-ln="98">
 	<span id="98#carmen" data-intext="carmen" data-perslemma="carmen1" data-lemma="carmen carminis n." data-pos="n-s---na-" data-shortdef="song, poem">carmen</span>
@@ -1890,7 +1890,7 @@
 	<span id="246#nefandī" data-intext="nefandī" data-perslemma="nefandus" data-lemma="nefandus –a –um" data-pos="a-s---ng-" data-shortdef="not to be spoken, unutterable">nefandī</span>
 	<span id="246#carminis" data-intext="carminis" data-perslemma="carmen1" data-lemma="carmen carminis n." data-pos="n-s---ng-" data-shortdef="song, poem">carminis</span>
 	<span id="246#trīstēs" data-intext="trīstēs" data-perslemma="tristis" data-lemma="trīstis trīste" data-pos="a-p---fn-" data-shortdef="sad">trīstēs</span>
-	<span id="246#minae" data-intext="minae" data-perslemma="mina" data-lemma="mina –ae f." data-pos="n-p---fn-" data-shortdef="a silver mina (unit of currency; Greek μνᾶ)">minae</span>.
+	<span id="246#minae" data-intext="minae" data-perslemma="minae" data-lemma="minae –ārum f.pl." data-pos="n-p---fn-" data-shortdef="threats">minae</span>.
 </p>
 </section>
 <section>
@@ -3252,7 +3252,7 @@
 	<span id="410#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="410#trīstēs" data-intext="trīstēs" data-perslemma="tristis" data-lemma="trīstis trīste" data-pos="a-p---fa-" data-shortdef="sad">trīstēs</span>
 	<span id="410#Erebī" data-intext="Erebī" data-perslemma="Erebus" data-lemma="Erebus –ī m." data-pos="n-s---mg-" data-shortdef="Erebus">Erebī</span>
-	<span id="410#minās" data-intext="minās" data-perslemma="mina" data-lemma="mina –ae f." data-pos="n-p---fa-" data-shortdef="a silver mina (unit of currency; Greek μνᾶ)">minās</span>
+	<span id="410#minās" data-intext="minās" data-perslemma="minae" data-lemma="minae –ārum f.pl." data-pos="n-p---fa-" data-shortdef="threats">minās</span>
 </p>
 <p data-ln="411">
 	<span id="411#avidumque" data-intext="avidumque" data-perslemma="avidus" data-lemma="avidus –a –um" data-pos="a-s---na-" data-shortdef="greedy, keen">avidumque</span>
@@ -4685,7 +4685,7 @@
 	<span id="604#gelidī" data-intext="gelidī" data-perslemma="gelidus" data-lemma="gelidus –a –um" data-pos="a-s---mg-" data-shortdef="cold, icy">gelidī</span>
 	<span id="604#Strȳmonis" data-intext="Strȳmonis" data-perslemma="Strymon" data-lemma="Strȳmōn –onis m." data-pos="n-s---mg-" data-shortdef="The river Strymon">Strȳmonis</span>
 	<span id="604#fugiēns" data-intext="fugiēns" data-perslemma="fugio" data-lemma="fugiō fugere fūgī fugitus" data-pos="v-spp-fn-" data-shortdef="to flee, escape">fugiēns</span>
-	<span id="604#minās" data-intext="minās" data-perslemma="mina" data-lemma="mina –ae f." data-pos="n-p---fa-" data-shortdef="a silver mina (unit of currency; Greek μνᾶ)">minās</span>
+	<span id="604#minās" data-intext="minās" data-perslemma="minae" data-lemma="minae –ārum f.pl." data-pos="n-p---fa-" data-shortdef="threats">minās</span>
 </p>
 <p data-ln="605">
 	<span id="605#permūtat" data-intext="permūtat" data-perslemma="permuto" data-lemma="permūtō permūtāre permūtāvī permūtātus" data-pos="v3spia---" data-shortdef="to exchange">permūtat</span>
@@ -4791,7 +4791,7 @@
 	<span id="618#tenetque" data-intext="tenetque" data-perslemma="teneo" data-lemma="teneō tenēre tenuī tentus" data-pos="v3spia---" data-shortdef="to hold">tenetque</span>
 	<span id="618#saevus" data-intext="saevus" data-perslemma="saevus" data-lemma="saevus –a –um" data-pos="a-s---mn-" data-shortdef="savage">saevus</span>
 	<span id="618#etiamnunc" data-intext="etiamnunc" data-perslemma="etiamnunc" data-lemma="etiamnum or etiamnunc" data-pos="d--------" data-shortdef="yet, till now, even at this time">etiamnunc</span>
-	<span id="618#minās" data-intext="minās" data-perslemma="mina" data-lemma="mina –ae f." data-pos="n-p---fa-" data-shortdef="a silver mina (unit of currency; Greek μνᾶ)">minās</span>.
+	<span id="618#minās" data-intext="minās" data-perslemma="minae" data-lemma="minae –ārum f.pl." data-pos="n-p---fa-" data-shortdef="threats">minās</span>.
 </p>
 <p data-ln="619">
 	<span id="619#tandem" data-intext="tandem" data-perslemma="tandem" data-lemma="tandem" data-pos="d--------" data-shortdef="finally">tandem</span>
@@ -7148,7 +7148,7 @@
 <p data-ln="903">
 	(<span id="903#quālis" data-intext="quālis" data-perslemma="qualis" data-lemma="quālis quāle" data-pos="a-s---fn-" data-shortdef="what sort">quālis</span>
 	<span id="903#accipitris" data-intext="accipitris" data-perslemma="accipiter" data-lemma="accipiter –tris m." data-pos="n-s---mg-" data-shortdef="hawk">accipitris</span>
-	<span id="903#minās" data-intext="minās" data-perslemma="mina" data-lemma="mina –ae f." data-pos="n-p---fa-" data-shortdef="a silver mina (unit of currency; Greek μνᾶ)">minās</span>
+	<span id="903#minās" data-intext="minās" data-perslemma="minae" data-lemma="minae –ārum f.pl." data-pos="n-p---fa-" data-shortdef="threats">minās</span>
 </p>
 <p data-ln="904">
 	<span id="904#fugit" data-intext="fugit" data-perslemma="fugio" data-lemma="fugiō fugere fūgī fugitus" data-pos="v3spia---" data-shortdef="to flee, escape">fugit</span>
@@ -7278,7 +7278,7 @@
 	<span id="923#spūmat" data-intext="spūmat" data-perslemma="spumo" data-lemma="spūmō spūmāre spūmāvī spūmātus" data-pos="v3spia---" data-shortdef="to foam">spūmat</span>
 	<span id="923#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="923#volvit" data-intext="volvit" data-perslemma="volvo" data-lemma="volvō volvere voluī volūtum" data-pos="v3spia---" data-shortdef="to roll, to ponder">volvit</span>
-	<span id="923#minās" data-intext="minās" data-perslemma="mina" data-lemma="mina –ae f." data-pos="n-p---fa-" data-shortdef="a silver mina (unit of currency; Greek μνᾶ)">minās</span>
+	<span id="923#minās" data-intext="minās" data-perslemma="minae" data-lemma="minae –ārum f.pl." data-pos="n-p---fa-" data-shortdef="threats">minās</span>
 </p>
 <p data-ln="924">
 	<span id="924#ac" data-intext="ac" data-perslemma="ac" data-lemma="ac" data-pos="c--------" data-shortdef="and in addition">ac</span>
